# grammar-test

./: .env.example  .gitignore  docker-compose-without-db.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py  seed_question_bank.py  update_articles_summary.py  update_conjunctions_summary.py  update_gerunds_infinitives_summary.py
backend/alembic/: env.py
backend/alembic/versions/: 9dddb31f08cc_initial_schema.py  b2c3d4e5f6a7_add_summary_to_grammar_topics.py  c3d4e5f6a7b8_add_question_bank.py
backend/app/: main.py
backend/app/api/: analytics.py  exams.py  router.py  topics.py
backend/app/core/: config.py  database.py  prompts.py
backend/app/models/: __init__.py  exam_session.py  grammar_topic.py  question.py  question_bank.py
backend/app/schemas/: analytics.py  exam.py  topic.py
backend/app/services/: analytics_service.py  exam_service.py  gemini_service.py  groq_service.py
backend/tests/: conftest.py  test_exams.py  test_topics.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: LoadingSpinner.vue  NavBar.vue  QuestionCard.vue  TopicCard.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: exam-store.ts
frontend/src/types/: index.ts
frontend/src/utils/: markdown-renderer.ts
frontend/src/views/: ExamView.vue  HistoryView.vue  (+5 more)
plans/260217-2225-toeic-practice-website/: phase-01-setup.md  phase-02-backend.md  phase-03-frontend.md  phase-04-integration.md  plan.md
